--- a/index.html
+++ b/index.html
@@ -26,5 +26,12 @@
        </ul>
 
      </header>
-</body>
+   
+     <div>
+         <section>
+             <h1>Эффективные решения для вашего бизнеса</h1>
+             <button type="button">Заказать услугу</button>
+         </section>
+     </div>
+ </body>
 </html>
