Список под Section 1

--- a/index.html
+++ b/index.html
@@ -33,5 +33,15 @@
              <button type="button">Заказать услугу</button>
          </section>
      </div>
+
+        
+     <ul>
+         <li>ВНИМАНИЕ К ДЕТАЛЯМ <br/> Идейные соображения, а также<br/> начало повседневной работы по <br/>формированию позиции.</li>
+         <li>ПУНКТУАЛЬНОСТЬ <br/>Задача организации, в особенности <br/>же рамки и место обучения кадров<br/> влечет за собой.</li>
+         <li>ПЛАНИРОВАНИЕ <br/>Равным образом консультация с <br/> широким активом в значительной <br/>степени обуславливает.</li>
+         <li>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ <br/>Значимость этих проблем настолько <br/>очевидна, что реализация плановых <br/>заданий.</li>
+     </ul>
+     
+
  </body>
 </html>
