--- a/index.html
+++ b/index.html
@@ -44,11 +44,44 @@
       <section>
         <h2>Чем мы занимаемся</h2>
       <ul>
-          <li><img src="/img/img1.jpg" alt=""></li>
-          <li><img src="/img/img2.jpg" alt=""></li>
-          <li><img src="/img/img3.jpg" alt=""></li>
+          <li><img src="/img/img1.jpg" alt="" width="370"></li>
+          <li><img src="/img/img2.jpg" alt="" width="370"></li>
+          <li><img src="/img/img3.jpg" alt="" width="370"></li>
       </ul>
 
+     </section>
+
+     <section>
+         <h2>Наша команда</h2> 
+         <ul>
+             <li>
+                 <figure>
+                    <img src="/img/1.jpg" alt="" width="270">
+                    <figcaption> <h3>Игорь Демьяненко</h3>Product Designer</figcaption>                                  
+                 </figure>                       
+             </li> 
+                <li>
+                    <figure>
+                        <img src="/img/2.jpg" alt="" width="270">
+                        <figcaption><h3>Ольга Репина</h3>Frontend Developer</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="/img/3.jpg" alt="" width="270">
+                        <figcaption><h3>Николай Тарасов</h3>Marketing</figcaption>
+                    </figure>
+                </li>
+                <li>
+                    <figure>
+                        <img src="/img/4.jpg" alt="" width="270">
+                        <figcaption>
+                            <h3>Михаил Ермаков</h3>UI Designer
+                        </figcaption>
+                    </figure>
+                </li>
+
+          </ul>      
      </section>
 
  </body>
