--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +23,9 @@
            <li><a href="">+38 096 111 11 11</a></li>
        </ul>
 
-     </header>
+    </header>
+
+    <main>
    
      <div>
          <section>
@@ -32,57 +34,74 @@
          </section>
      </div>
 
-     <div>
-        <ul>
-            <li>ВНИМАНИЕ К ДЕТАЛЯМ <br/> Идейные соображения, а также<br/> начало повседневной работы по <br/>формированию позиции.</li>
-            <li>ПУНКТУАЛЬНОСТЬ <br/>Задача организации, в особенности <br/>же рамки и место обучения кадров<br/> влечет за собой.</li>
-            <li>ПЛАНИРОВАНИЕ <br/>Равным образом консультация с <br/> широким активом в значительной <br/>степени обуславливает.</li>
-            <li>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ <br/>Значимость этих проблем настолько <br/>очевидна, что реализация плановых <br/>заданий.</li>
-        </ul>
-    </div>
-
-      <section>
-        <h2>Чем мы занимаемся</h2>
-      <ul>
-          <li><img src="/img/img1.jpg" alt="" width="370"></li>
-          <li><img src="/img/img2.jpg" alt="" width="370"></li>
-          <li><img src="/img/img3.jpg" alt="" width="370"></li>
-      </ul>
-
-     </section>
-
      <section>
-         <h2>Наша команда</h2> 
+         <h2>Наши преимущества</h2>
          <ul>
              <li>
-                 <figure>
-                    <img src="/img/1.jpg" alt="" width="270">
-                    <figcaption> <h3>Игорь Демьяненко</h3>Product Designer</figcaption>                                  
-                 </figure>                       
-             </li> 
+                 <h3><b>Внимание к деталям</b></h3>
+                 <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+             </li>
                 <li>
-                    <figure>
-                        <img src="/img/2.jpg" alt="" width="270">
-                        <figcaption><h3>Ольга Репина</h3>Frontend Developer</figcaption>
-                    </figure>
+                    <h3><b>Пунктуальность</b></h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="/img/3.jpg" alt="" width="270">
-                        <figcaption><h3>Николай Тарасов</h3>Marketing</figcaption>
-                    </figure>
+                    <h3><b>Планирование</b></h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="/img/4.jpg" alt="" width="270">
-                        <figcaption>
-                            <h3>Михаил Ермаков</h3>UI Designer
-                        </figcaption>
-                    </figure>
+                    <h3><b>Современные технологии</b></h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
-
-          </ul>      
+         </ul>
      </section>
 
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="/img/img1.jpg" alt="Набор кода" width="370"></li>
+                <li><img src="/img/img2.jpg" alt="Работа с приложениями" width="370"></li>
+                <li><img src="/img/img3.jpg" alt="Выбор цветовой гаммы" width="370"></li>
+            </ul>
+
+        </section>
+
+        <section>
+            <h2>Наша команда</h2> 
+           <ul> 
+               <li>
+                   <img src="/img/1.jpg" alt="Игорь Демьяненко" width="270">
+                   <h3>Игорь Демьяненко</h3>
+                   <p lang="en">Product Designer</p>
+               </li>
+                <li>
+                    <img src="/img/2.jpg" alt="Ольга Репина" width="270">
+                    <h3>Ольга Репина</h3>
+                    <p lang="en" >Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="/img/3.jpg" alt="Николай Тарасов" width="270">
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
+                </li>
+                <li>
+                    <img src="/img/4.jpg" alt="Михаил Ермаков" width="270">
+                    <h3>Михаил Ермаков</h3>
+                    <p lang="en">UI Designer</p>
+                </li>
+           </ul>               
+        </section>
+
+        <footer>
+            <a href="/"><span>Web</span>Studio</a>
+            <address>
+                <ul>
+                    <li>г. Киев, пр-т Леси Украинки, 26</li>
+                    <li><a href="">info@example.com</a></li>
+                    <li><a href="">+38 099 111 11 11</a></li>
+                </ul>
+            </address>
+        </footer>
+    </main>
  </body>
 </html>
