--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="/img/img1.jpg" alt="Набор кода" width="370"></li>
-                <li><img src="/img/img2.jpg" alt="Работа с приложениями" width="370"></li>
-                <li><img src="/img/img3.jpg" alt="Выбор цветовой гаммы" width="370"></li>
+                <li><img src="./img/img1.jpg" alt="Набор кода" width="370"></li>
+                <li><img src="./img/img2.jpg" alt="Работа с приложениями" width="370"></li>
+                <li><img src="./img/img3.jpg" alt="Выбор цветовой гаммы" width="370"></li>
             </ul>
 
         </section>
@@ -70,22 +70,22 @@
             <h2>Наша команда</h2> 
            <ul> 
                <li>
-                   <img src="/img/1.jpg" alt="Игорь Демьяненко" width="270">
+                   <img src="./img/1.jpg" alt="Игорь Демьяненко" width="270">
                    <h3>Игорь Демьяненко</h3>
                    <p lang="en">Product Designer</p>
                </li>
                 <li>
-                    <img src="/img/2.jpg" alt="Ольга Репина" width="270">
+                    <img src="./img/2.jpg" alt="Ольга Репина" width="270">
                     <h3>Ольга Репина</h3>
                     <p lang="en" >Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/img/3.jpg" alt="Николай Тарасов" width="270">
+                    <img src="./img/3.jpg" alt="Николай Тарасов" width="270">
                     <h3>Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="/img/4.jpg" alt="Михаил Ермаков" width="270">
+                    <img src="./img/4.jpg" alt="Михаил Ермаков" width="270">
                     <h3>Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
