--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
        </nav>
 
        <ul>
-           <li><a href="">info@devstudio.com</a></li>
-           <li><a href="">+38 096 111 11 11</a></li>
+           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+           <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
        </ul>
 
     </header>
@@ -97,8 +97,8 @@
             <address>
                 <ul>
                     <li>г. Киев, пр-т Леси Украинки, 26</li>
-                    <li><a href="">info@example.com</a></li>
-                    <li><a href="">+38 099 111 11 11</a></li>
+                    <li><a href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a href="tel:+38 099 111 11 11">+38 099 111 11 11</a></li>
                 </ul>
             </address>
         </footer>
